[package]
name = "rqds-telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
local-ip-address = "0.5.4"
regex = "1.9.3"
reqwest = {version = "0.11.18", features = ["blocking"]}
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
whoami = "1.4.1"
